# Paper-1_Supraharmonics

./: .gitignore  Concept.txt  DECISIONS.md  Literature.txt  Outline.txt  README.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  agents.yaml  analysis_commands.txt  draft9.txt  josh_bundleproject_files.py  new 2.txt  powershell_repro_commands.txt  project_code_bundle.txt  proposal.normalized.json  pyproject.toml  supplementary 9.txt  synthetic_supraharmonic_shotnoise.csv  tables.txt  tasks.seed.yaml  tasks.yaml
docs/: index.md  package_architecture_report.txt
examples/: grid_robustness_check.py  pipeline_cli.py  quickstart.py  reviewer_readiness_report.py  validate_and_benchmark.py
issue 4 address folder/: reviewer_issue_extracts_obtainable.csv  reviewer_issue_extracts_obtainable_summary.txt
scripts/: __init__.py  config.py  feeder_benchmark.py  feeder_sim.py  generate_review_complete_synthetic_data.py  io.py  metrics.py  plots.py  plotting_style.py  reanalyze_available_synthetic.py  run_all.py  tables.py
specs/: A1.md  A2.md  A3.md  A4.md  A5.md
synthetic_data/: synthetic_latest_analytical.csv  synthetic_latest_coherence_sweep_multiseed.csv  synthetic_latest_coherence_sweep_statistics.csv  synthetic_latest_density_sweep_multiseed.csv  synthetic_latest_density_sweep_statistics.csv  synthetic_latest_extended_manifest.json  synthetic_latest_feeder_kernel_profiles.csv  synthetic_latest_feeder_specs.csv  synthetic_latest_feeder_termination_sensitivity.csv  synthetic_latest_feeder_validation_detail.csv  synthetic_latest_feeder_validation_summary.csv  (+4 more)
tests/: conftest.py
(+60 files in other folders)
