[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "supraharmonic-aggregation"
version = "0.1.0"
description = "Research-grade package for transformer-level supraharmonic aggregation analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Supraharmonic Aggregation Contributors" }]
keywords = ["power-systems", "supraharmonics", "simulation", "analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
supraharmonic-pipeline = "supraharmonic_aggregation.cli:main"

[dependency-groups]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pip-audit>=2.7",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/supraharmonic_aggregation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "pipeline: pipeline and CLI tests",
  "acceptance: release-gate and objective tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[tool.uv]
package = true
